# illiterate-vulkan

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat  compile_shaders.bat  compute.md  log.hpp  log.txt  run.bat
src/: compute.cpp  logger.h  main.cpp  ref.cpp
src/shaders/: shader.frag  shader.vert
